--- a/resetpin.ui
+++ b/resetpin.ui
@@ -82,9 +82,9 @@ QWidget {background-color: rgb(255, 255, 255)}
      <item row="2" column="1">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="2">
-        <widget class="QLineEdit" name="lineEdit">
+        <widget class="QLineEdit" name="currentPwd">
          <property name="maxLength">
-          <number>4</number>
+          <number>5</number>
          </property>
          <property name="echoMode">
           <enum>QLineEdit::Password</enum>
@@ -106,7 +106,7 @@ QWidget {background-color: rgb(255, 255, 255)}
         </widget>
        </item>
        <item row="1" column="2">
-        <widget class="QLineEdit" name="lineEdit_2">
+        <widget class="QLineEdit" name="newPwd">
          <property name="maxLength">
           <number>4</number>
          </property>
