--- a/resetpin.ui
+++ b/resetpin.ui
@@ -87,7 +87,7 @@ QWidget {background-color: rgb(255, 255, 255)}
           <number>4</number>
          </property>
          <property name="echoMode">
-          <enum>QLineEdit::Normal</enum>
+          <enum>QLineEdit::Password</enum>
          </property>
         </widget>
        </item>
@@ -111,7 +111,7 @@ QWidget {background-color: rgb(255, 255, 255)}
           <number>4</number>
          </property>
          <property name="echoMode">
-          <enum>QLineEdit::Normal</enum>
+          <enum>QLineEdit::Password</enum>
          </property>
         </widget>
        </item>
