--- a/inventory.ui
+++ b/inventory.ui
@@ -48,6 +48,9 @@ QWidget {background-color: white}
     </item>
     <item row="0" column="1">
      <layout class="QGridLayout" name="gridLayout_2">
+      <property name="horizontalSpacing">
+       <number>15</number>
+      </property>
       <item row="1" column="0" colspan="3">
        <spacer name="verticalSpacer">
         <property name="orientation">
@@ -65,7 +68,7 @@ QWidget {background-color: white}
        <widget class="QTreeView" name="treeView">
         <property name="minimumSize">
          <size>
-          <width>300</width>
+          <width>350</width>
           <height>400</height>
          </size>
         </property>
@@ -103,11 +106,23 @@ QWidget {background-color: white}
       <item row="4" column="2">
        <layout class="QGridLayout" name="gridLayout">
         <property name="leftMargin">
-         <number>20</number>
+         <number>0</number>
         </property>
         <property name="rightMargin">
          <number>0</number>
         </property>
+        <item row="5" column="1">
+         <widget class="QLabel" name="partBox">
+          <property name="font">
+           <font>
+            <pointsize>14</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>5</string>
+          </property>
+         </widget>
+        </item>
         <item row="3" column="1">
          <widget class="QLabel" name="partID">
           <property name="font">
@@ -146,22 +161,10 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="7" column="0">
+        <item row="8" column="0">
          <widget class="QPushButton" name="addToCartButton">
           <property name="text">
            <string>Add to Cart</string>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <widget class="QLabel" name="partBox">
-          <property name="font">
-           <font>
-            <pointsize>14</pointsize>
-           </font>
-          </property>
-          <property name="text">
-           <string>5</string>
           </property>
          </widget>
         </item>
@@ -232,7 +235,7 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="8" column="1">
          <widget class="QSpinBox" name="qtySpinBox">
           <property name="minimumSize">
            <size>
@@ -292,12 +295,25 @@ QWidget {background-color: white}
           </property>
          </widget>
         </item>
-        <item row="8" column="0" colspan="2">
+        <item row="9" column="0" colspan="2">
          <widget class="QPushButton" name="cartButton">
           <property name="text">
            <string>View Cart</string>
           </property>
          </widget>
+        </item>
+        <item row="7" column="1">
+         <spacer name="verticalSpacer_4">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
         </item>
        </layout>
       </item>
@@ -338,7 +354,7 @@ QWidget {background-color: white}
        <widget class="QListView" name="listView">
         <property name="minimumSize">
          <size>
-          <width>300</width>
+          <width>350</width>
           <height>400</height>
          </size>
         </property>
