--- a/inventory.ui
+++ b/inventory.ui
@@ -111,6 +111,12 @@ QWidget {background-color: white}
         <property name="rightMargin">
          <number>0</number>
         </property>
+        <property name="horizontalSpacing">
+         <number>14</number>
+        </property>
+        <property name="verticalSpacing">
+         <number>6</number>
+        </property>
         <item row="5" column="1">
          <widget class="QLabel" name="partBox">
           <property name="font">
