--- a/adminpanel.ui
+++ b/adminpanel.ui
@@ -21,14 +21,14 @@ QWidget {background-color: rgb(255, 255, 255)}
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="0" column="1">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="4" column="0">
+     <item row="2" column="0">
       <widget class="QPushButton" name="pushButton_3">
        <property name="text">
         <string>View Purchase Requests</string>
        </property>
       </widget>
      </item>
-     <item row="5" column="0">
+     <item row="4" column="0">
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
@@ -40,20 +40,6 @@ QWidget {background-color: rgb(255, 255, 255)}
         </size>
        </property>
       </spacer>
-     </item>
-     <item row="3" column="0">
-      <widget class="QPushButton" name="pushButton_2">
-       <property name="text">
-        <string>Add Item to Inventory</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QPushButton" name="pushButton">
-       <property name="text">
-        <string>Add User</string>
-       </property>
-      </widget>
      </item>
      <item row="0" column="0" alignment="Qt::AlignHCenter">
       <widget class="QLabel" name="label_5">
@@ -83,6 +69,13 @@ QWidget {background-color: rgb(255, 255, 255)}
         </size>
        </property>
       </spacer>
+     </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>View Active Projects</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
