--- a/cart.ui
+++ b/cart.ui
@@ -234,6 +234,13 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
+       <item row="9" column="0" colspan="2">
+        <widget class="QPushButton" name="openInventory">
+         <property name="text">
+          <string>Add Items to Cart</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </item>
      <item row="0" column="0" colspan="4" alignment="Qt::AlignHCenter">
