--- a/cart.ui
+++ b/cart.ui
@@ -87,7 +87,7 @@ QWidget {background-color: white}
         </widget>
        </item>
        <item row="8" column="0" colspan="2">
-        <widget class="QPushButton" name="removeFromCartButton">
+        <widget class="QPushButton" name="removeCartButton">
          <property name="text">
           <string>Remove From Cart</string>
          </property>
