--- a/scratchpad.ui
+++ b/scratchpad.ui
@@ -478,6 +478,31 @@
     </rect>
    </property>
   </widget>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>330</x>
+     <y>160</y>
+     <width>461</width>
+     <height>251</height>
+    </rect>
+   </property>
+   <column>
+    <property name="text">
+     <string>Price</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Item</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>Project</string>
+    </property>
+   </column>
+  </widget>
  </widget>
  <resources/>
  <connections/>
