Redid some spacing work

--- a/cart.ui
+++ b/cart.ui
@@ -47,19 +47,6 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
-     <item row="3" column="0" colspan="4">
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
-        <enum>Qt::Vertical</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>20</width>
-         <height>40</height>
-        </size>
-       </property>
-      </spacer>
-     </item>
      <item row="2" column="3">
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="0" colspan="2" alignment="Qt::AlignHCenter">
@@ -86,7 +73,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="8" column="0" colspan="2">
+       <item row="7" column="0" colspan="2">
         <widget class="QPushButton" name="removeCartButton">
          <property name="text">
           <string>Remove From Cart</string>
@@ -202,19 +189,6 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="7" column="0" colspan="2">
-        <spacer name="verticalSpacer_4">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
        <item row="2" column="0" colspan="2" alignment="Qt::AlignHCenter">
         <widget class="QLabel" name="label">
          <property name="maximumSize">
@@ -234,7 +208,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="9" column="0" colspan="2">
+       <item row="8" column="0" colspan="2">
         <widget class="QPushButton" name="openInventory">
          <property name="text">
           <string>Inventory</string>
@@ -262,19 +236,6 @@ QWidget {background-color: white}
        </property>
       </widget>
      </item>
-     <item row="2" column="1">
-      <widget class="QListView" name="listView">
-       <property name="minimumSize">
-        <size>
-         <width>500</width>
-         <height>0</height>
-        </size>
-       </property>
-       <property name="editTriggers">
-        <set>QAbstractItemView::NoEditTriggers</set>
-       </property>
-      </widget>
-     </item>
      <item row="2" column="2">
       <spacer name="horizontalSpacer_3">
        <property name="orientation">
@@ -288,6 +249,22 @@ QWidget {background-color: white}
        </property>
       </spacer>
      </item>
+     <item row="2" column="1">
+      <widget class="QListView" name="listView">
+       <property name="minimumSize">
+        <size>
+         <width>500</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
+       <property name="alternatingRowColors">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item row="0" column="2">
@@ -299,6 +276,19 @@ QWidget {background-color: white}
       <size>
        <width>40</width>
        <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <spacer name="verticalSpacer_2">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
       </size>
      </property>
     </spacer>
