--- a/requestitem.ui
+++ b/requestitem.ui
@@ -100,13 +100,13 @@ QWidget {background-color: rgb(255, 255, 255)}
         <font>
          <family>Noto Sans</family>
          <pointsize>24</pointsize>
-         <weight>9</weight>
+         <weight>50</weight>
          <italic>false</italic>
          <bold>false</bold>
         </font>
        </property>
        <property name="styleSheet">
-        <string notr="true">font: 75 24pt &quot;Noto Sans&quot;;</string>
+        <string notr="true">font: 24pt &quot;Noto Sans&quot;;</string>
        </property>
        <property name="text">
         <string>Purchase Request Form</string>
