--- a/editdetails.ui
+++ b/editdetails.ui
@@ -90,7 +90,11 @@ QWidget {background-color: white}
         <widget class="QLineEdit" name="email"/>
        </item>
        <item row="0" column="2">
-        <widget class="QLineEdit" name="name"/>
+        <widget class="QLineEdit" name="name">
+         <property name="enabled">
+          <bool>false</bool>
+         </property>
+        </widget>
        </item>
        <item row="3" column="3">
         <spacer name="horizontalSpacer_2">
