Made images change on click

--- a/cart.ui
+++ b/cart.ui
@@ -59,7 +59,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_12">
          <property name="font">
           <font>
@@ -73,14 +73,14 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="7" column="0" colspan="2">
+       <item row="9" column="0" colspan="2">
         <widget class="QPushButton" name="removeCartButton">
          <property name="text">
           <string>Remove From Cart</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_3">
          <property name="font">
           <font>
@@ -94,7 +94,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="5" column="1">
         <widget class="QLabel" name="partID">
          <property name="font">
           <font>
@@ -106,7 +106,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="label_5">
          <property name="font">
           <font>
@@ -120,7 +120,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="6" column="1">
         <widget class="QLabel" name="partShelf">
          <property name="font">
           <font>
@@ -132,7 +132,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="8" column="1">
         <widget class="QLabel" name="partQty">
          <property name="font">
           <font>
@@ -144,7 +144,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="label_4">
          <property name="font">
           <font>
@@ -158,7 +158,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="7" column="1">
         <widget class="QLabel" name="partBox">
          <property name="font">
           <font>
@@ -189,8 +189,8 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2" alignment="Qt::AlignHCenter">
-        <widget class="QLabel" name="label">
+       <item row="3" column="0" colspan="2" alignment="Qt::AlignHCenter">
+        <widget class="QLabel" name="partImage">
          <property name="maximumSize">
           <size>
            <width>130</width>
@@ -208,12 +208,38 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="8" column="0" colspan="2">
+       <item row="10" column="0" colspan="2">
         <widget class="QPushButton" name="openInventory">
          <property name="text">
           <string>Inventory</string>
          </property>
         </widget>
+       </item>
+       <item row="2" column="0" colspan="2">
+        <spacer name="verticalSpacer_3">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="4" column="0" colspan="2">
+        <spacer name="verticalSpacer_4">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
       </layout>
      </item>
