--- a/cart.ui
+++ b/cart.ui
@@ -215,7 +215,7 @@ QWidget {background-color: white}
          </property>
         </widget>
        </item>
-       <item row="2" column="0" colspan="2">
+       <item row="2" column="0">
         <spacer name="verticalSpacer_3">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -228,7 +228,7 @@ QWidget {background-color: white}
          </property>
         </spacer>
        </item>
-       <item row="4" column="0" colspan="2">
+       <item row="4" column="1">
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
